2003-04-9  Eric Boix <Eric.Boix@creatis.insa-lyon.fr> with JPR
      * src/Makefile.am now exports all the necessary include files at
        make install stage.

2003-04-9 JPR
      * UpdateGroupLength replaced by new one

2003-04-7 JPR
      * UpdateGroupLength re-written using H-Table
        (named UpdateGroupLengthNew untill checks are over)
      
2003-04-7 Eric Boix <Eric.Boix@creatis.insa-lyon.fr> with JPR
      * Data/im_00001 renamed to gdcm-MR-PHILIPS-16-Multi-Seq.dcm
      * gdcmPython/testSuite.py now include a test of gdcmFile::Write.
      * src:
        - gdcmHeader::GetPubElValSet removed.
        - gdcmElValSet::WriteDcm, WriteAcr, WriteExplVR, revamped to
          UpdateGroupLength, WriteElements, Write.
        - gdcmHeader::FileType moved to gdcmCommon.h. The enum FileType
          doesn't contain TrueDicom anymore since ExplicitVR and ImplicitVR
          carried the same semantics.
          - src/gdcmHeaderIdo.cxx changed accordingly.
        - gdcmFile::WriteBase now regroups all the codes from previous
          versions of WriteDcm, WriteDcmImplVR, and WriteACR.
        - enum FileType moved to gdcmCommon.h
      * src/gdcmHeader.cxx AddDefault trashed
      * gdcmGetXSize added
      * getimageDataSize now calls gdcmGetXSize
      * Test/*.cxx changed to agree with above changes

2003-03-31 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.h: LoadElements() is not a public method anymore
        (to avoid double call by end user).
      * Test/*.cxx LoadElements() doesn't need to be called explicitely
        by end user, since gdcmHeader::gdcmHeader now handles it.

2003-03-29 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * gdcm/Doc many doxygen changes:
        - Doxyfile now has two different versions, DoxyfileUsers that generates
          the html.users end users oriented documentation and
          DoxyfileDeveloppers that generates the html.developper developper
          oriented documentation.